--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* body {
-} */
+body {
+    background: #030014;
+    color: white;
+    font-family: "Geist", sans-serif;
+}
+
+.max-width {
+    max-width: 1280px;
+    margin: 0 auto;
+}
