--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,21 @@ body {
     max-width: 1280px;
     margin: 0 auto;
 }
+
+@keyframes gradientMove {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.animate-gradient {
+    background: linear-gradient(45deg, #450103, #4f0239, #01506e, #0d0258);
+    background-size: 400% 400%;
+    animation: gradientMove 10s ease infinite;
+}
