--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,18 @@ body {
     @apply max-w-[1280px] mx-auto p-4;
 }
 
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar {
+    background-image: linear-gradient(#17016e, #8f053178);
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.109);
+    border-radius: 4px;
+}
+
 .sidebar-scrollbar::-webkit-scrollbar {
     width: 5px;
 }
