--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,14 +17,15 @@ body {
   @apply max-w-[1280px] mx-auto p-4;
 }
 
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
     width: 8px;
 }
-::-webkit-scrollbar {
+
+body::-webkit-scrollbar {
     background-image: linear-gradient(#17016e, #8f053178);
 }
 
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
     background: rgba(255, 255, 255, 0.109);
     border-radius: 4px;
 }
