--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,15 +6,19 @@
 @tailwind utilities;
 
 body {
-  background: #030014;
-  color: white;
-  font-family: "Geologica", sans-serif;
-  max-width: 100%;
-  overflow-x: hidden;
+    background: #030014;
+    color: white;
+    font-family: "Geologica", sans-serif;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+.font-bangla {
+    font-family: "Hind Siliguri", sans-serif;
 }
 
 .max-width {
-  @apply max-w-[1280px] mx-auto p-4;
+    @apply max-w-[1280px] mx-auto p-4;
 }
 
 body::-webkit-scrollbar {
@@ -31,74 +35,74 @@ body::-webkit-scrollbar-thumb {
 }
 
 .sidebar-scrollbar::-webkit-scrollbar {
-  width: 5px;
+    width: 5px;
 }
 
 .sidebar-scrollbar::-webkit-scrollbar-track {
-  background: transparent;
+    background: transparent;
 }
 
 .sidebar-scrollbar::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 4px;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 4px;
 }
 
 @keyframes gradientMove {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 .animate-gradient {
-  background: linear-gradient(45deg, #450103, #4f0239, #01506e, #0d0258);
-  background-size: 400% 400%;
-  animation: gradientMove 10s ease infinite;
+    background: linear-gradient(45deg, #450103, #4f0239, #01506e, #0d0258);
+    background-size: 400% 400%;
+    animation: gradientMove 10s ease infinite;
 }
 
 @layer base {
-  :root {
-    --radius: 0.5rem;
-  }
+    :root {
+        --radius: 0.5rem;
+    }
 }
 
 /* toggle button animation start */
 .toggleOn > div:nth-child(1) {
-  top: 50%;
-  transform: translateY(-100%) rotate(45deg);
-  transition: top 0.2s 0.2s, transform 0.2s 0.2s, transform 0.2s 0.4s;
+    top: 50%;
+    transform: translateY(-100%) rotate(45deg);
+    transition: top 0.2s 0.2s, transform 0.2s 0.2s, transform 0.2s 0.4s;
 }
 .toggleOn > div:nth-child(2) {
-  width: 100%;
-  top: 50%;
-  transform: translateY(-100%) rotate(-45deg);
-  transition: width 0.2s, transform 0.2s 0.4s;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-100%) rotate(-45deg);
+    transition: width 0.2s, transform 0.2s 0.4s;
 }
 .toggleOn > div:nth-child(3) {
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.2s;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.2s;
 }
 
 .toggleOff > div:nth-child(1) {
-  top: 0;
-  transform: translateY(0) rotate(0);
-  transition: top 0.2s 0.2s, transform 0.2s 0.2s, transform 0.2s;
+    top: 0;
+    transform: translateY(0) rotate(0);
+    transition: top 0.2s 0.2s, transform 0.2s 0.2s, transform 0.2s;
 }
 .toggleOff > div:nth-child(2) {
-  width: 70%;
-  top: 50%;
-  transform: translateY(-100%) rotate(0);
-  transition: width 0.2s 0.4s, transform 0.2s;
+    width: 70%;
+    top: 50%;
+    transform: translateY(-100%) rotate(0);
+    transition: width 0.2s 0.4s, transform 0.2s;
 }
 .toggleOff > div:nth-child(3) {
-  opacity: 100;
-  visibility: visible;
-  transition: 0.2s 0.4s;
+    opacity: 100;
+    visibility: visible;
+    transition: 0.2s 0.4s;
 }
 /* toggle button animation end */
